# bettertouchtool-mcp-server

./: .gitignore  CLAUDE.md  README.md  btt_mcp.py  pyproject.toml  run_server.py  test_request.py
docs/btt/: btt_cli_actions_docs.md  btt_cli_docs.md  btt_trigger_docs.md  btt_vars_docs.md
src/btt_mcp/: __init__.py  config.py  server.py
src/btt_mcp/client/: __init__.py  base.py  cli.py  http.py
src/btt_mcp/formatters/: __init__.py  markdown.py
src/btt_mcp/models/: __init__.py  actions.py  clipboard.py  common.py  floating_menus.py  presets.py  triggers.py  variables.py  widgets.py
src/btt_mcp/tools/: __init__.py  actions.py  clipboard.py  floating_menus.py  presets.py  reference.py  triggers.py  variables.py  widgets.py
tests/: test_client.py  test_formatters.py  test_imports.py  test_models.py
tests/examples/: example_settings.btt-preset
